@@ -2,23 +2,23 @@
 
 namespace dhope0000\LXDClient\Tools\InstanceSettings;
 
-use dhope0000\LXDClient\Tools\User\UserSession;
+use dhope0000\LXDClient\Tools\User\ValidatePermissions;
 use dhope0000\LXDClient\Model\InstanceSettings\InsertSetting;
 
 class SaveSettings
 {
     private $insertSetting;
-    private $userSession;
+    private $validatePermissions;
 
-    public function __construct(UserSession $userSession, InsertSetting $insertSetting)
+    public function __construct(ValidatePermissions $validatePermissions, InsertSetting $insertSetting)
     {
-        $this->userSession = $userSession;
+        $this->validatePermissions = $validatePermissions;
         $this->insertSetting = $insertSetting;
     }
 
-    public function save(array $settings) :bool
+    public function save($userId, $settings) :bool
     {
-        $this->userSession->isAdminOrThrow();
+        $this->validatePermissions->isAdminOrThrow($userId);
 
         foreach ($settings as $setting) {
             $this->insertSetting->insert($setting["id"], $setting["value"]);
