@@ -2,23 +2,23 @@
 
 namespace dhope0000\LXDClient\Tools\User;
 
-use dhope0000\LXDClient\Tools\User\UserSession;
+use dhope0000\LXDClient\Tools\User\ValidatePermissions;
 use dhope0000\LXDClient\Model\Users\InsertUser;
 use dhope0000\LXDClient\Model\Users\FetchUserDetails;
 
 class AddUser
 {
-    public function __construct(UserSession $userSession, InsertUser $insertUser, FetchUserDetails $fetchUserDetails)
+    public function __construct(ValidatePermissions $validatePermissions, InsertUser $insertUser, FetchUserDetails $fetchUserDetails)
     {
-        $this->userSession = $userSession;
+        $this->validatePermissions = $validatePermissions;
         $this->insertUser = $insertUser;
         $this->fetchUserDetails = $fetchUserDetails;
     }
 
-    public function add(string $username, string $password)
+    public function add(int $userId, string $username, string $password)
     {
-        $this->userSession->isAdminOrThrow();
-        
+        $this->validatePermissions->isAdminOrThrow($userId);
+
         if ($this->fetchUserDetails->fetchHash($username) !== false) {
             throw new \Exception("Already have a user with this username", 1);
         }
